# cmake-toolchain-arduino-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: IntegrationTests.yaml  IntegrationTests.yml  RunTestSuite.yml  Test-ATTinyCore.yml  Test-ArduinoAVR.yml  Test-ArduinoSAMD.yml  Test-ESP32.yml  Test-ESP8266.yml  Test-STM32.yml  badge-arduino-avr.yml  badge-arduino-samd.yml  badge-attinycore.yml  badge-esp32.yml  badge-esp8266.yml  badge-stm32.yml  main.yml  run-testsuite.yml
tests/: CMakeLists.txt  CTestResources.json.in  platforms.cmake
tests/CMakeBlink/: CMakeBlink.ino  CMakeLists.txt  Dummy.cpp
tests/DigitalPotControl/: CMakeLists.txt
tests/EchoString/: CMakeLists.txt
tests/LinkStatus/: CMakeLists.txt
tests/TFTBitmapLogo/: CMakeLists.txt  TFTBitmapLogo.ino
tests/TwoPortReceive/: CMakeLists.txt
toolchain/: arduino-cli-toolchain.cmake
toolchain/Arduino/: RulesOverride.cmake  ScriptMode.cmake
toolchain/Scripts/: CollectLibraries.cmake  Preprocess.cmake
toolchain/Templates/: ArduinoLibraryCMakeLists.txt.in  CollectLibrariesConfig.cmake.in  PreprocessConfig.cmake.in
tools/: check-platform-support.cmake
